--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
 			<version>2.3.232</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- mapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
