add module payment & correction payement->paiement for swagger / recup test old git project Bloc3 & correction

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,13 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+		<!-- Test container Postgresql -->
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>1.20.6</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<profiles>
