--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,17 +8,13 @@ spring:
     password: ${ALWAYS_POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
     hikari:
-      # Configurations HikariCP
-      connection-timeout: ${HIKARI_CONNECTION_TIMEOUT:30000}  # 30 secondes
-      idle-timeout: ${HIKARI_IDLE_TIMEOUT:600000}             # 10 minutes
-      max-lifetime: ${HIKARI_MAX_LIFETIME:1800000}            # 30 minutes
-      maximum-pool-size: ${HIKARI_MAX_POOL_SIZE:10}           # Ajuster selon la charge attendue
-      minimum-idle: ${HIKARI_MIN_IDLE:5}                      # Ajuster selon la charge attendue
+      maximum-pool-size: ${HIKARI_MAX_POOL_SIZE:5}
+      minimum-idle: ${HIKARI_MIN_IDLE:2}
       pool-name: Jo2024ProdHikariPool
 
   jpa:
     hibernate:
-      ddl-auto: update              # 'validate' vérifie que le schéma de la BDD correspond aux entités.
+      ddl-auto: validate
     show-sql: ${JPA_SHOW_SQL:false} # Pour éviter des logs excessifs.
     open-in-view: false
     properties:
