--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,6 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-
-		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
 			<version>${jjwt.version}</version>
@@ -180,7 +175,8 @@
 			</activation>
 		</profile>
 		<profile>
-			<id>prod</id> </profile>
+			<id>docker</id>
+		</profile>
 		<profile>
 			<id>test</id>
 		</profile>
