--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -14,7 +14,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: ${JPA_SHOW_SQL:false} # Pour éviter des logs excessifs.
     open-in-view: false
     properties:
