--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,7 +108,7 @@ jobs:
         run: heroku logs --app ${{ secrets.HEROKU_APP_NAME_BE }} --num 100
 
       # 12. Arrêter les dynos
-      #- name: Stop Heroku Dynos
-      #  if: ${{ false }} # désactivé par défaut
-       # run: |
-        #  heroku ps:scale web=0 --app ${{ secrets.HEROKU_APP_NAME_BE }}
+      - name: Stop Heroku Dynos
+        if: ${{ false }} # désactivé par défaut
+        run: |
+          heroku ps:scale web=0 --app ${{ secrets.HEROKU_APP_NAME_BE }}
