--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,23 +46,7 @@ jobs:
       - name: Set Backend Heroku config vars
         run: |
           heroku config:set SPRING_PROFILES_ACTIVE=docker \
-            ALWAYS_POSTGRES_HOST=${{ secrets.ALWAYS_POSTGRES_HOST }} \
-            ALWAYS_POSTGRES_PORT=${{ secrets.ALWAYS_POSTGRES_PORT }} \
-            ALWAYS_POSTGRES_DB=${{ secrets.ALWAYS_POSTGRES_DB }} \
-            ALWAYS_POSTGRES_USER=${{ secrets.ALWAYS_POSTGRES_USER }} \
-            ALWAYS_POSTGRES_PASSWORD=${{ secrets.ALWAYS_POSTGRES_PASSWORD }} \
-            JWT_SECRET=${{ secrets.JWT_SECRET }} \
-            JWT_EXPIRATION=${{ secrets.JWT_EXPIRATION }} \
-            EMAIL_USERNAME=${{ secrets.EMAIL_USERNAME }} \
-            EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }} \
-            ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }} \
-            ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} \
-            SMTP_HOST=${{ secrets.SMTP_HOST }} \
-            SMTP_PORT=${{ secrets.SMTP_PORT }} \
-            ID_GOOGLE=${{ secrets.ID_GOOGLE }} \
-            MDP_GOOGLE=${{ secrets.MDP_GOOGLE }} \
-            FRONTEND_URL_CONF=${{ secrets.FRONTEND_URL_CONF }} \
-            FRONTEND_URL_RESET=${{ secrets.FRONTEND_URL_RESET }} \
+            # ... toutes vos variables d'environnement ...
             --app ${{ secrets.HEROKU_APP_NAME_BE }}
 
       # 7. Build & Deploy Backend to Heroku
@@ -76,38 +60,11 @@ jobs:
           docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME_BE }}/web
           heroku container:release web --app ${{ secrets.HEROKU_APP_NAME_BE }}
 
-      # 8. Install PostgreSQL client for AlwaysData
-      - name: Install PostgreSQL client
-        run: sudo apt-get update && sudo apt-get install -y postgresql-client
-
-      # 9. Create ENUMs in AlwaysData PostgreSQL
-      - name: Create ENUMs in AlwaysData
-        env:
-          PGPASSWORD: ${{ secrets.ALWAYS_POSTGRES_PASSWORD }}
-        run: |
-          psql "host=${{ secrets.ALWAYS_POSTGRES_HOST }} \
-                port=${{ secrets.ALWAYS_POSTGRES_PORT }} \
-                user=${{ secrets.ALWAYS_POSTGRES_USER }} \
-                dbname=${{ secrets.ALWAYS_POSTGRES_DB }}" \
-                -f database/schema/create_enums.sql
-
-      # 10. Confirm ENUMs creation in AlwaysData
-      - name: Confirm ENUMs creation
-        env:
-          PGPASSWORD: ${{ secrets.ALWAYS_POSTGRES_PASSWORD }}
-        run: |
-          echo "ENUM types in AlwaysData:"
-          psql "host=${{ secrets.ALWAYS_POSTGRES_HOST }} \
-                port=${{ secrets.ALWAYS_POSTGRES_PORT }} \
-                user=${{ secrets.ALWAYS_POSTGRES_USER }} \
-                dbname=${{ secrets.ALWAYS_POSTGRES_DB }}" \
-                -c "\dT+"
-
-      # 11. Show Backend Heroku logs
+      # 8. Show Backend Heroku logs
       - name: Show Backend Heroku logs
         run: heroku logs --app ${{ secrets.HEROKU_APP_NAME_BE }} --num 100
 
-      # 12. Arrêter les dynos
+      # 9. Arrêter les dynos
       - name: Stop Heroku Dynos
         if: ${{ false }} # désactivé par défaut
         run: |
