--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -35,6 +35,9 @@ spring:
             enable: true
             required: true
 
+  flyway:
+    baseline-on-migrate: true
+
 server:
   port: ${PORT:8080}
 
