--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -38,8 +38,17 @@ spring:
   flyway:
     baseline-on-migrate: true
 
+  main:
+    lazy-initialization: true
+
 server:
   port: ${PORT:8080}
+  tomcat:
+    threads:
+      max: 30
+      min-spare: 5
+    max-connections: 40
+    accept-count: 10
 
   # Compression des réponses HTTP pour la performance
   compression:
