add staffcontroller&billetAlreadyscannet& notFound&billetQueryservice&fix mcv billet

--- a/src/test/resources/data-test.yml
+++ b/src/test/resources/data-test.yml
@@ -1,6 +1,7 @@
 -- Insérer les rôles de base
 INSERT INTO roles (id_role, type_role) VALUES (1, 'USER');
 INSERT INTO roles (id_role, type_role) VALUES (2, 'ADMIN');
+insert into roles (id_role, type_role) VALUES (3, 'SCANNER');
 
 -- Insérer les méthodes de paiement de base
 INSERT INTO methodes_paiement (id_methode, nom_methode_paiement) VALUES (1, 'CARTE_BANCAIRE');
